--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ button {
 	border-radius: 3px;
 	box-shadow: 2px 2px 1px;
 }
+button:hover{
+	box-shadow: none;
+}
 table{
 	border-collapse: collapse;
 	text-align: center;
