--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ legend {
 }
 
 fieldset {
-    position: relative
+    position: relative;
+    width: 500px;
 }
 
 fieldset input {
@@ -65,7 +66,7 @@ th,
 td {
     text-align: center;
 }
-#errorMsg{
+#errorBox{
     margin: 20px;
     padding: 10px;
     text-align: center;
@@ -76,10 +77,10 @@ td {
     background-color: rgba(214, 12, 12, 0.205);
     color: darkred;
 }
-#errorMsg h4{
+#errorBox h4{
     margin: 1em;
 }
-#errorMsg p{
+#errorBox p{
     line-height: 5px;
 }
 .hide{
